fixed issue with aside
Aside would get too big as the story would grow

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ aside {
     order: 2;
     padding: 1em;
     margin: 0 15px 0 15px;
+    width: 30%;
 }
 
 aside h2 {
